<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="transcend.rockeeper.activities.FirstTimePage"
    style="@style/AppTheme"
    android:background="@color/bg"
    android:id="@+id/section_label">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF" />
    
    <TextView
        android:id="@+id/missingFirstFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:text="@string/missingFields"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/abc_text_size_caption_material"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/first_time_page_layout_height"
        android:layout_marginLeft="@dimen/first_time_page_margin"
        android:layout_marginRight="@dimen/first_time_page_margin"
        android:layout_marginTop="40dp"
        android:layout_below="@id/welcome"
        android:paddingLeft="5dp"
        android:background="#FFFFFF"
        android:inputType="textPersonName"
        android:textSize="@dimen/first_time_page_text_size"
        android:hint="@string/name_hint" />

    <Spinner
        android:id="@+id/experience_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/first_time_page_margin"
        android:layout_marginRight="@dimen/first_time_page_margin"
        android:layout_marginTop="15dp"
        android:layout_below="@id/user_name" />

    <EditText
        android:id="@+id/fav_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/first_time_page_layout_height"
        android:layout_marginLeft="@dimen/first_time_page_margin"
        android:layout_marginRight="@dimen/first_time_page_margin"
        android:layout_marginTop="15dp"
        android:paddingLeft="5dp"
        android:background="#FFFFFF"
        android:textSize="@dimen/first_time_page_text_size"
        android:layout_below="@id/experience_level"
        android:hint="@string/fav_location_hint" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/fav_location"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:onClick="launchMainPage"/>



</RelativeLayout>
